add chapter css/ add text chapter 1

--- a/css/style.css
+++ b/css/style.css
@@ -172,3 +172,7 @@ hr {
 .chapter-list a:hover {
   color: var(--link-color);
 }
+
+/* =========================================
+   8. BOOK INNARDS
+   ========================================= */
